# cc-theme

./: .cc-theme-workspace.json  .gitignore  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_report.yml  feature_request.yml
.github/workflows/: adapter-metadata.yml  adapter-release.yml  ci.yml  release.yml
adapters/mac-claude/: .gitignore  CHANGELOG.md  CLIENT_DEPLOY_PROMPT.md  LICENSE  MIGRATION.md  NOTICE.md  PROJECT_MANIFEST.json  README.md  RELEASE_CHECKLIST.md  SOURCE_ATTRIBUTION.md  VERSION  package.json
adapters/mac-codex/: CHANGELOG.md  CLIENT_DEPLOY_PROMPT.md  CONTEXT.md  LICENSE  MIGRATION.md  NOTICE.md  PROJECT_MANIFEST.json  README.md  RELEASE_CHECKLIST.md  SOURCE_ATTRIBUTION.md  VERSION  package.json
adapters/mac-doubao/: GOTHIC_VOID_CRUSADE_QA.md  PROJECT_MANIFEST.json  README.md  package.json
adapters/mac-workbuddy/: CONTEXT.md  GOTHIC_VOID_CRUSADE_QA.md  PROJECT_MANIFEST.json  README.md  SOURCE_ATTRIBUTION.md  package.json
adapters/win-claude/: CONTEXT.md  (+4 more)
app/: .gitignore  README.md  index.html  package.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: main.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: adapter_catalog.rs  adapter_installer.rs  capabilities.rs  compiler.rs  discovery.rs  lib.rs  main.rs  models.rs  operations.rs  process.rs  registry.rs  themes.rs
docs/: ADAPTER_RELEASE_ORDER.md  ADR_IMMERSIVE_SCENE_V1.md  MAC_COORDINATION.md  OWNERSHIP.md  WINDOWS_COORDINATION.md
tests/: release-workflow.test.mjs  repository-contracts.test.mjs  repository-identity.test.mjs  repository-layout.test.mjs
themes/: README.md
(+523 files in other folders)
