[package]
name = "cc-theme"
version = "0.2.0"
description = "Unified macOS theme tool for Codex and WorkBuddy"
authors = ["CC Theme contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cc_theme_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cc-theme"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ed25519-dalek = "2"
plist = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
